[gd_scene load_steps=7 format=2]

[ext_resource path="res://Npc/Npc.gd" type="Script" id=1]
[ext_resource path="res://assets/char1.tres" type="SpriteFrames" id=2]

[sub_resource type="PhysicsMaterial" id=27]
friction = 0.0
bounce = 0.2

[sub_resource type="CircleShape2D" id=30]
radius = 62.0081

[sub_resource type="CircleShape2D" id=29]
radius = 7.0

[sub_resource type="CircleShape2D" id=28]
radius = 7.0

[node name="Npc" type="RigidBody2D" groups=["npcs"]]
collision_layer = 3
collision_mask = 3
mode = 2
mass = 0.1
physics_material_override = SubResource( 27 )
gravity_scale = 0.0
can_sleep = false
linear_damp = 10.0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "down"
frame = 2

[node name="ScareArea" type="Area2D" parent="."]

[node name="RunAway" type="CollisionShape2D" parent="ScareArea"]
modulate = Color( 1, 0, 0, 0.254902 )
show_behind_parent = true
shape = SubResource( 30 )

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 0, 2 )
shape = SubResource( 29 )

[node name="State" type="Node" parent="."]

[node name="Human" type="Node" parent="State"]

[node name="Zombie" type="Node" parent="State"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 2 )
shape = SubResource( 28 )

[connection signal="body_entered" from="ScareArea" to="." method="_on_ScareArea_body_entered"]
[connection signal="body_exited" from="ScareArea" to="." method="_on_ScareArea_body_exited"]
[connection signal="body_entered" from="HitArea" to="." method="_on_HitArea_body_entered"]
